tests/ui/privacy/no-ice-on-inference-failure.stderr
error: constant evaluation is taking a long time
  --> $DIR/no-ice-on-inference-failure.rs:5:9
   |
LL | /         while n < 5 {
LL | |
LL | |             x = &0;
LL | |         }
   | |_________^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/no-ice-on-inference-failure.rs:2:22
   |
LL |       let array = [(); {
   |  ______________________^
LL | |         let mut x = &0;
LL | |         let mut n = 0;
LL | |         while n < 5 {
...  |
LL | |         0
LL | |     }];
   | |_____^
   = note: `#[deny(long_running_const_eval)]` on by default

error[E0282]: type annotations needed
  --> $DIR/no-ice-on-inference-failure.rs:12:50
   |
LL |     let mut ptrs: Vec<*const [u8]> = vec![&array[0..0], &array[0..1], &array, &array[1..]];
   |                                                  ^^^^ cannot infer type for struct `std::ops::Range<{integer}>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
